# fragmentomics

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE1_WAR_PLANS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml  docs.yml  release.yml  test.yml
benchmarks/: README.md  speed_benchmark.py
docs/: STRATEGY.md  cli.md  contributing.md  index.md  installation.md  quickstart.md
docs/api/: features.md  index.md  io.md  main.md  viz.md
docs/guide/: gc.md  motifs.md  nucleosome.md  sizes.md
notebooks/: 01_quickstart.ipynb  02_cancer_detection.ipynb  03_batch_analysis.ipynb
src/fragmentomics/: __init__.py  cli.py
src/fragmentomics/features/: __init__.py  coverage.py  delfi.py  gc.py  motifs.py  nucleosome.py  sizes.py
src/fragmentomics/io/: __init__.py  bam.py  regions.py
src/fragmentomics/models/: __init__.py  cancer_detector.py
src/fragmentomics/reports/: __init__.py  generator.py  sections.py  utils.py
src/fragmentomics/reports/templates/: report.html
src/fragmentomics/utils/: __init__.py  logging.py  parallel.py
src/fragmentomics/viz/: __init__.py  plots.py
tests/: conftest.py  test_cli.py  test_coverage.py  test_delfi.py  test_gc.py  test_models.py  test_motifs.py  test_nucleosome.py  test_regions.py  test_reports.py  test_sizes.py  test_viz.py
tests/data/: generate_test_bam.py
