[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fragmentomics"  # Brand: FragMentor
version = "0.1.0-dev"
description = "The definitive open-source toolkit for cfDNA fragmentomics analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jordon", email = "TBD" },
]
keywords = [
    "bioinformatics",
    "cfDNA",
    "cell-free DNA",
    "fragmentomics",
    "liquid biopsy",
    "cancer detection",
    "genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pysam>=0.22.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]
ml = [
    "torch>=2.0.0",
    "shap>=0.43.0",
]

[project.scripts]
fragmentomics = "fragmentomics.cli:app"

[project.urls]
Homepage = "https://github.com/fragmentomics/fragmentomics"
Documentation = "https://fragmentomics.github.io/fragmentomics"
Repository = "https://github.com/fragmentomics/fragmentomics"
Issues = "https://github.com/fragmentomics/fragmentomics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fragmentomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=fragmentomics --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
